--- a/contracts.html
+++ b/contracts.html
@@ -183,8 +183,8 @@
                     aria-controls="tabs-with-underline-1" role="tab">
                     <img class="h-4 w-auto" src="./assets/images/total-projects-icon.svg" alt="">
                     <div>
-                        <span class="text-base font-semibold block text-left">Total Projects</span>
-                        <span class="text-2xl font-extrabold block text-left">5000</span>
+                        <span class="text-2xl font-extrabold block text-left">All Contracts</span>
+                        <span class="text-sm block text-left">List of all contracts which are approved & yet to be approved</span>
                     </div>
                 </button>
                 <button type="button"
@@ -193,7 +193,7 @@
                     aria-controls="tabs-with-underline-2" role="tab">
                     <img class="h-4 w-auto" src="./assets/images/total-employees-icon.svg" alt="">
                     <div>
-                        <span class="text-base font-semibold block text-left">Total Employees</span>
+                        <span class="text-base font-semibold block text-left">Total Contracts</span>
                         <span class="text-2xl font-extrabold block text-left">2000</span>
                     </div>
                 </button>
@@ -203,7 +203,7 @@
                     aria-controls="tabs-with-underline-3" role="tab">
                     <img class="h-4 w-auto" src="./assets/images/overrun-employees-icon.svg" alt="">
                     <div>
-                        <span class="text-base font-semibold block text-left">Overrun Employees</span>
+                        <span class="text-base font-semibold block text-left">Approved</span>
                         <span class="text-2xl font-extrabold block text-left">800</span>
                     </div>
                 </button>
@@ -213,7 +213,7 @@
                     aria-controls="tabs-with-underline-3" role="tab">
                     <img class="h-4 w-auto" src="./assets/images/onbench-employees-icon.svg" alt="">
                     <div>
-                        <span class="text-base font-semibold block text-left">On Bench Employees</span>
+                        <span class="text-base font-semibold block text-left">Pending for Approval</span>
                         <span class="text-2xl font-extrabold block text-left">400</span>
                     </div>
                 </button>
@@ -223,7 +223,7 @@
                     aria-controls="tabs-with-underline-3" role="tab">
                     <img class="h-4 w-auto" src="./assets/images/deployed-employees-icon.svg" alt="">
                     <div>
-                        <span class="text-base font-semibold block text-left">Deployed Employees</span>
+                        <span class="text-base font-semibold block text-left">Rejected</span>
                         <span class="text-2xl font-extrabold block text-left">200</span>
                     </div>
                 </button>
@@ -232,7 +232,7 @@
 
         <div class="mt-3">
             <div id="tabs-with-underline-1" role="tabpanel" aria-labelledby="tabs-with-underline-item-1">
-                <div class="status-bar flex gap-5 items-center overflow-x-auto p-2 flex-wrap">
+                <div class="status-bar flex gap-5 items-center overflow-x-auto p-2 flex-wrap hidden">
                     <div class="info flex-1 flex items-center gap-3  2xl:gap-5 flex-wrap">
                         <div class="">
                             <span class="font-bold text-gray-700 text-base 2xl:text-2xl">Total Projects :</span>
@@ -303,7 +303,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="filters-bar flex items-center gap-4 p-2">
+                <div class="filters-bar flex items-center gap-4 p-2 hidden">
                     <span>Applied Filters</span>
                     <div class="active-filter-wrapper flex-1 overflow-y-auto flex items-center gap-3">
                         <div class="rounded-full px-4 py-2 bg-gray-300 text-sm relative whitespace-nowrap group">
@@ -324,25 +324,19 @@
                                         <tr>
                                             <th scope="col"
                                                 class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Project</th>
+                                                Contracts</th>
                                             <th scope="col"
                                                 class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Project Start Date</th>
+                                                Created On</th>
                                             <th scope="col"
                                                 class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Customer</th>
+                                                Created By</th>
                                             <th scope="col"
                                                 class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Costing</th>
+                                                Contract Cost</th>
                                             <th scope="col"
                                                 class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Practices</th>
-                                            <th scope="col"
-                                                class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Sub-Practices</th>
-                                            <th scope="col"
-                                                class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                                Project Type</th>
+                                                Project Head</th>
                                             <th scope="col"
                                                 class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
                                                 Project Status</th>
@@ -357,19 +351,20 @@
                                     <tbody class="divide-y divide-gray-200">
                                         <tr>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 ">
-                                                Project 1</td>
+                                                Contract 1</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">10/01/1997
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">GSK</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">1.1Cr</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Application
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Qlik Sense
+                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
+                                                <span class="status approved">Approved</span>
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
+                                            <!-- <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
                                                 <span class="status completed">Completed</span>
-                                            </td>
+                                            </td> -->
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
                                                 <a class="text-gray-800 hover:text-blue-700 underline" href="#">View All
                                                     Details</a>
@@ -393,19 +388,20 @@
                                         </tr>
                                         <tr>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 ">
-                                                Project 2</td>
+                                                Contract 1</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">10/01/1997
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">GSK</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">1.1Cr</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Application
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Qlik Sense
-                                            </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
                                                 <span class="status pending">Pending</span>
                                             </td>
+                                            <!-- <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
+                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
+                                                <span class="status completed">Completed</span>
+                                            </td> -->
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
                                                 <a class="text-gray-800 hover:text-blue-700 underline" href="#">View All
                                                     Details</a>
@@ -429,19 +425,20 @@
                                         </tr>
                                         <tr>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 ">
-                                                Project 2</td>
+                                                Contract 1</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">10/01/1997
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">GSK</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">1.1Cr</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Application
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Qlik Sense
-                                            </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
-                                                <span class="status hold">On Hold</span>
+                                                <span class="status completed">Pending</span>
                                             </td>
+                                            <!-- <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
+                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
+                                                <span class="status completed">Completed</span>
+                                            </td> -->
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
                                                 <a class="text-gray-800 hover:text-blue-700 underline" href="#">View All
                                                     Details</a>
@@ -465,7 +462,7 @@
                                         </tr>
                                         <tr>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 ">
-                                                Project 2</td>
+                                                Contract 1</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">10/01/1997
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">GSK</td>
@@ -474,10 +471,10 @@
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Qlik Sense
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
+                                            <!-- <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
-                                                <span class="status progress">Progress</span>
-                                            </td>
+                                                <span class="status completed">Completed</span>
+                                            </td> -->
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
                                                 <a class="text-gray-800 hover:text-blue-700 underline" href="#">View All
                                                     Details</a>
