--- a/login.html
+++ b/login.html
@@ -39,12 +39,15 @@
             </div>
         </div>
         <div class="form-wrapper bg-white rounded-3xl hover:shadow-lg transition-shadow duration-500 h-full max-h-[900px] self-center p-5 sm:p-7 md:p-9 2xl:p-11 overflow-y-auto">
-            <div class="logo flex gap-2 mb-[1rem] sm:mb-[2rem] md:mb-[3rem] xl:mb-[4rem] 2xl:mb-[5rem] items-center">
+            <!-- <div class="logo flex gap-2 mb-[1rem] sm:mb-[2rem] md:mb-[3rem] xl:mb-[4rem] 2xl:mb-[5rem] items-center">
                 <img class="h-10 w-10 sm:h-12 sm:w-12 xl:h-16 xl:w-16" src="./assets/images/logo-icon.svg" alt="">
                 <div class="text flex flex-col">
                     <span class="font-extrabold text-xl sm:text-2xl md:text-3xl 2xl:text-5xl">HR.</span>
                     <span class="text-sm md:text-base 2xl:text-xl">Management</span>
                 </div>
+            </div> -->
+            <div class="logo">
+                <img class="w-5" src="./assets/images/logo.svg" alt="">
             </div>
             <h2 class="text-base sm:text-xl md:text-2xl 2xl:text-4xl font-extrabold mb-3 sm-mb-5 md:mb-7 xl:mb-9 2xl:mb-11">Login</h2>
             <form action="">
@@ -95,7 +98,7 @@
             </form>
         </div>
     </div>
-    <div class="circle bg-orange-600 w-96 h-96 rounded-full fixed right-0 bottom-0 -z-10 translate-x-[25%] translate-y-[25%]"></div>
+    <div class="circle bg-orange-600 w-72 h-72 md:w-80 md:h-80 2xl:w-96 2xl:h-96 rounded-full fixed right-0 bottom-0 -z-10 translate-x-[25%] translate-y-[25%]"></div>
     <script src="./node_modules/preline/dist/preline.js"></script>
     <script>
         function togglePassword(mode) {
