--- a/contracts.html
+++ b/contracts.html
@@ -669,7 +669,7 @@
             </button>
         </div>
     </div>
-    <script src="./node_modules/preline/dist/preline.js"></script>
+    <script src="./assets/js/preline.js"></script>
 </body>
 
 </html>
