--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
             </button>
         </div>
     </div>
-    <script src="./node_modules/preline/dist/preline.js"></script>
+    <script src="./assets/js/preline.js"></script>
 </body>
 
 </html>
