--- a/contracts.html
+++ b/contracts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Contracts</title>
     <link rel="stylesheet" href="./dist/output.css">
 </head>
 
@@ -15,7 +15,7 @@
         </div>
         <ul class="menu flex-1 overflow-y-auto flex flex-col gap-5">
             <li>
-                <a href="#" class="menu-item active text-xl px-5 py-3 rounded-lg flex items-center gap-2">
+                <a href="#" class="menu-item text-xl px-5 py-3 rounded-lg flex items-center gap-2">
                     <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M13 9V3h8v6h-8ZM3 13V3h8v10H3Zm10 8V11h8v10h-8ZM3 21v-6h8v6H3Z" />
                     </svg>
@@ -57,7 +57,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="menu-item text-xl px-5 py-3 rounded-lg flex items-center gap-2">
+                <a href="#" class="menu-item text-xl px-5 py-3 rounded-lg flex items-center gap-2 active">
                     <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M13 9V3h8v6h-8ZM3 13V3h8v10H3Zm10 8V11h8v10h-8ZM3 21v-6h8v6H3Z" />
                     </svg>
@@ -469,7 +469,8 @@
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">1.1Cr</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Application
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Qlik Sense
+                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
+                                                <span class="status rejected">Rejected</span>
                                             </td>
                                             <!-- <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">T&M</td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
