--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-wrapper bg-white rounded-3xl hover:shadow-lg transition-shadow duration-500 h-full max-h-[900px] self-center p-5 sm:p-7 md:p-9 2xl:p-11 overflow-y-auto">
+        <div class="form-wrapper bg-white rounded-3xl hover:shadow-lg transition-shadow duration-500 h-full max-h-[900px] self-center p-5 sm:p-7 md:p-9 2xl:p-11 overflow-y-auto" style="padding-bottom: 0 !important;">
             <!-- <div class="logo flex gap-2 mb-[1rem] sm:mb-[2rem] md:mb-[3rem] xl:mb-[4rem] 2xl:mb-[5rem] items-center">
                 <img class="h-10 w-10 sm:h-12 sm:w-12 xl:h-16 xl:w-16" src="./assets/images/logo-icon.svg" alt="">
                 <div class="text flex flex-col">
