--- a/project-detailed-view.html
+++ b/project-detailed-view.html
@@ -266,8 +266,57 @@
                     
                 </div>
             </div>
-            <div class="flex-1">
+            <div class="flex-1 p-3">
                 <div></div>
+                <p class="text-2xl font-bold">Project 01 <span class="bg-slate-800 rounded-full px-3 py-1 text-white ml-2 text-xs">T&M</span></p>
+                <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pulvinar ipsum id ex sagittis, id varius diam mollis. Nam vestibulum dignissim gravida...</p>
+                <p class="mb-3 font-bold">Contract Details</p>
+                <div class="bg-[#fafafa] p-3 rounded overflow-x-auto flex items-center gap-3 mb-3">
+                    <div>
+                        <p>Contract Start Date</p>
+                        <p class="font-bold">11/11/2023</p>
+                    </div>
+                    <div>
+                        <p>Contract End Date</p>
+                        <p class="font-bold">11/11/2023</p>
+                    </div>
+                    <div>
+                        <p>Contract No.</p>
+                        <p class="font-bold">11/11/2023</p>
+                    </div>
+                    <div>
+                        <p>Contract Cost</p>
+                        <p class="font-bold">11/11/2023</p>
+                    </div>
+                    <div>
+                        <p>Contract Type</p>
+                        <p class="font-bold">New</p>
+                    </div>
+                </div>
+                <p class="mb-3 font-bold">Information</p>
+                <div class="bg-[#fafafa] p-3 rounded overflow-x-auto flex items-center gap-3 mb-3">
+
+                </div>
+                <p class="mb-3 font-bold">Team Members</p>
+                <div class="flex items-center gap-5 overflow-x-auto">
+                    <div class="flex flex-col gap-2 items-center justify-center">
+                        <img src="./assets/images/google-logo.svg" class="w-10 h-10 rounded-full" alt="">
+                        <p class="text-sm text-gray-400">Keshav</p>
+                    </div>
+                    <div class="flex flex-col gap-2 items-center justify-center">
+                        <img src="./assets/images/google-logo.svg" class="w-10 h-10 rounded-full" alt="">
+                        <p class="text-sm text-gray-400">Keshav</p>
+                    </div>
+                    <div class="flex flex-col gap-2 items-center justify-center">
+                        <img src="./assets/images/google-logo.svg" class="w-10 h-10 rounded-full" alt="">
+                        <p class="text-sm text-gray-400">Keshav</p>
+                    </div>
+                    <div class="flex flex-col gap-2 items-center justify-center">
+                        <img src="./assets/images/google-logo.svg" class="w-10 h-10 rounded-full" alt="">
+                        <p class="text-sm text-gray-400">Keshav</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
