--- a/new-customers.html
+++ b/new-customers.html
@@ -206,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mb-4">
+            <div class="mb-4 max-w-2xl">
                 <span class="mb-2 font-medium block">Primary Contact</span>
                 <div class="flex gap-3 items-center flex-wrap">
                     <select
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <div class="mb-4">
-                <span class="mb-2 font-medium block">Primary Contact</span>
+                <span class="mb-2 font-medium block">Company Name</span>
                 <div class="flex items-center gap-3 flex-wrap">
                     <input type="text"
                     class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
@@ -248,6 +248,120 @@
                     <input type="email"
                     class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
                     placeholder="Enter Company Email">
+                </div>
+            </div>
+            <div class="mb-4">
+                <span class="mb-2 font-medium block">Customer Phone</span>
+                <div class="flex items-center gap-3 flex-wrap">
+                    <input type="text"
+                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                    placeholder="Work phone">
+                    <input type="text"
+                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                    placeholder="Alternate phone">
+                </div>
+            </div>
+            <div class="multipart-wrapper">
+                <div class="multipart-indicators-wrapper flex items-center border-b">
+                    <div class="multipart-indicator py-2 px-4 active">Other Details</div>
+                    <div class="multipart-indicator py-2 px-4">Address</div>
+                    <!-- <div class="multipart-indicator py-2 px-4">Contact Persons</div> -->
+                </div>
+                <div class="multipart-form-wrapper mt-4">
+                    <div class="multipart-form active w-full max-w-lg">
+                        <div class="mb-4">
+                            <span class="mb-2 font-medium block">PAN</span>
+                            <div class="flex items-center gap-3 flex-wrap">
+                                <input type="text"
+                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                placeholder="Enter PAN Number">
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <span class="mb-2 font-medium block">Currency</span>
+                            <div class="flex items-center gap-3 flex-wrap">
+                                <select type="text"
+                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                placeholder="Enter PAN Number"></select>
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <span class="mb-2 font-medium block">GST No.</span>
+                            <div class="flex items-center gap-3 flex-wrap">
+                                <input type="text"
+                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                placeholder="Enter PAN Number">
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <span class="mb-2 font-medium block">Payment Terms</span>
+                            <div class="flex items-center gap-3 flex-wrap">
+                                <select type="text"
+                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                placeholder="Enter PAN Number"></select>
+                            </div>
+                        </div>
+                        <button onclick="showFormStep(2);" type="button" class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-transparent bg-[#00cc83] text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm sm:text-base">
+                            Next
+                        </button>
+                    </div>
+                    <div class="multipart-form w-full max-w-lg">
+                        <div class="grid grid-cols-1 sm:grid-cols-2 mb-4 gap-4">
+                            <div>
+                                <span class="mb-2 font-medium block">Country/Region</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number">
+                                </div>
+                            </div>
+                            <div>
+                                <span class="mb-2 font-medium block">City</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <select type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number"></select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-1 sm:grid-cols-2 mb-4 gap-4">
+                            <div>
+                                <span class="mb-2 font-medium block">State</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number">
+                                </div>
+                            </div>
+                            <div>
+                                <span class="mb-2 font-medium block">Zipcode</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <select type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number"></select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <div>
+                                <span class="mb-2 font-medium block">Address</span>
+                                <div class="flex items-center gap-3 flex-wrap mb-4">
+                                    <input type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Address Line 1">
+                                </div>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Address Line 2">
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-transparent bg-[#00cc83] text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm sm:text-base">
+                            Save
+                        </button>
+                        <p class="text-sm text-gray-400 mt-2">After saving the details you can add projects for the new customer</p>
+                    </div>
                 </div>
             </div>
         </form>
@@ -469,6 +583,22 @@
         </div>
     </div>
     <script src="./assets/js/preline.js"></script>
+    <script>
+        function showFormStep(step) {
+            const allStepIndicators = document.querySelectorAll(".multipart-indicator")
+            const allStepForm = document.querySelectorAll(".multipart-form")
+
+            const _step = step-1;
+
+            allStepIndicators.forEach((item, index) => {
+                item.classList.remove("active");
+                allStepForm[index].classList.remove("active");
+            })
+
+            allStepIndicators[_step].classList.add("active")
+            allStepForm[_step].classList.add("active")
+        }
+    </script>
 </body>
 
 </html>
