--- a/new-customers.html
+++ b/new-customers.html
@@ -241,25 +241,35 @@
                       </label>
                 </div>
             </div>
-            <div class="mb-4 max-w-2xl">
-                <span class="mb-2 font-medium block text-sm 2xl:text-base">Company Email</span>
-                <div class="flex items-center gap-3 flex-wrap">
+            <div class="mb-4 max-w-2xl flex flex-col sm:flex-row gap-3">
+                <div class="flex-1">
+                    <span class="mb-2 font-medium block text-sm 2xl:text-base">Company Email</span>
                     <input type="email"
-                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                     placeholder="Enter Company Email">
                 </div>
+                <div class="flex-1">
+                    <span class="mb-2 font-medium block text-sm 2xl:text-base">Customer Phone</span>
+                    <input type="text"
+                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                    placeholder="Work phone">
+                </div>
+                <div class="flex-1">
+                    <span class="mb-2 font-medium block text-sm 2xl:text-base text-transparent">Alternate Phone</span>
+                    <input type="text"
+                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                    placeholder="Alternate phone">
+                </div>
             </div>
-            <div class="mb-4 max-w-2xl">
+            <!-- <div class="mb-4 max-w-2xl">
                 <span class="mb-2 font-medium block text-sm 2xl:text-base">Customer Phone</span>
                 <div class="flex items-center gap-3 flex-wrap">
-                    <input type="text"
-                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
-                    placeholder="Work phone">
+                    
                     <input type="text"
                     class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                     placeholder="Alternate phone">
                 </div>
-            </div>
+            </div> -->
             <div class="multipart-wrapper">
                 <div class="multipart-indicators-wrapper flex items-center border-b">
                     <div class="multipart-indicator py-2 px-4 active">Other Details</div>
@@ -268,44 +278,46 @@
                 </div>
                 <div class="multipart-form-wrapper mt-4">
                     <div class="multipart-form active w-full max-w-2xl">
-                        <div class="mb-4">
-                            <span class="mb-2 font-medium block text-sm 2xl:text-base">PAN</span>
-                            <div class="flex items-center gap-3 flex-wrap">
-                                <input type="text"
-                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
-                                placeholder="Enter PAN Number">
+                        <div class="grid grid-cols-1 sm:grid-cols-3 gap-3">
+                            <div>
+                                <span class="mb-2 font-medium block text-sm 2xl:text-base">PAN</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number">
+                                </div>
+                            </div>
+                            <div>
+                                <span class="mb-2 font-medium block text-sm 2xl:text-base">Currency</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <select type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number"></select>
+                                </div>
+                            </div>
+                            <div>
+                                <span class="mb-2 font-medium block text-sm 2xl:text-base">GST No.</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number">
+                                </div>
+                            </div>
+                            <div>
+                                <span class="mb-2 font-medium block text-sm 2xl:text-base">Payment Terms</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <select type="text"
+                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    placeholder="Enter PAN Number"></select>
+                                </div>
                             </div>
                         </div>
-                        <div class="mb-4">
-                            <span class="mb-2 font-medium block text-sm 2xl:text-base">Currency</span>
-                            <div class="flex items-center gap-3 flex-wrap">
-                                <select type="text"
-                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
-                                placeholder="Enter PAN Number"></select>
-                            </div>
-                        </div>
-                        <div class="mb-4">
-                            <span class="mb-2 font-medium block text-sm 2xl:text-base">GST No.</span>
-                            <div class="flex items-center gap-3 flex-wrap">
-                                <input type="text"
-                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
-                                placeholder="Enter PAN Number">
-                            </div>
-                        </div>
-                        <div class="mb-4">
-                            <span class="mb-2 font-medium block text-sm 2xl:text-base">Payment Terms</span>
-                            <div class="flex items-center gap-3 flex-wrap">
-                                <select type="text"
-                                class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
-                                placeholder="Enter PAN Number"></select>
-                            </div>
-                        </div>
-                        <button onclick="showFormStep(2);" type="button" class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-transparent bg-[#00cc83] text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-xs sm:text-sm 2xl:text-base">
+                        <button onclick="showFormStep(2);" type="button" class="mt-3 py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-transparent bg-[#00cc83] text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-xs sm:text-sm 2xl:text-base">
                             Next
                         </button>
                     </div>
                     <div class="multipart-form w-full max-w-2xl">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 mb-4 gap-4">
+                        <div class="grid grid-cols-1 sm:grid-cols-3 mb-4 gap-4">
                             <div>
                                 <span class="mb-2 font-medium block">Country/Region</span>
                                 <div class="flex items-center gap-3 flex-wrap">
@@ -322,8 +334,6 @@
                                     placeholder="Enter PAN Number"></select>
                                 </div>
                             </div>
-                        </div>
-                        <div class="grid grid-cols-1 sm:grid-cols-2 mb-4 gap-4">
                             <div>
                                 <span class="mb-2 font-medium block">State</span>
                                 <div class="flex items-center gap-3 flex-wrap">
@@ -340,8 +350,6 @@
                                     placeholder="Enter PAN Number"></select>
                                 </div>
                             </div>
-                        </div>
-                        <div class="mb-4">
                             <div>
                                 <span class="mb-2 font-medium block">Address</span>
                                 <div class="flex items-center gap-3 flex-wrap mb-4">
@@ -349,11 +357,12 @@
                                     class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Address Line 1">
                                 </div>
-                                <div class="flex items-center gap-3 flex-wrap">
-                                    <input type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
-                                    placeholder="Address Line 2">
-                                </div>
+                            </div>
+                            <div class="">
+                                <span class="mb-2 font-medium block text-transparent">Address</span>
+                                <input type="text"
+                                class="py-3 w-full px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                placeholder="Address Line 2">
                             </div>
                         </div>
                         <button type="button" class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-transparent bg-[#00cc83] text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-xs sm:text-sm 2xl:text-base">
