--- a/new-customers.html
+++ b/new-customers.html
@@ -229,15 +229,9 @@
                     <input type="text"
                     class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                     placeholder="Enter Company Name">
-                    <label class="block flex-1">
-                        <span class="sr-only">Choose profile photo</span>
-                        <input type="file" class="block w-full text-xs 2xl:text-sm text-gray-500
-                          file:mr-4 file:py-2 file:px-4
-                          file:rounded-md file:border-0
-                          file:text-sm file:font-semibold
-                          file:bg-emerald-500 file:text-white
-                          hover:file:bg-emerald-600
-                        "/>
+                    <label class="block flex-1 border py-3 px-4 rounded">
+                        <span id="fileName text-xs 2xl:text-sm text-emerald-400">Choose profile photo</span>
+                        <input type="file" class="hidden"/>
                       </label>
                 </div>
             </div>
