--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                     <label for="tmd-id" class="block text-sm md:text-base 2xl:text-xl font-medium mb-2">TMC ID</label>
                     <div class="relative">
                         <input type="text" id="tmd-id" name="tmd-id"
-                            class="py-3 xl:py-4 2xl:py-5 px-4 pl-10 2xl:pl-14 block w-full border-gray-200 shadow-sm rounded-md text-sm md:text-base 2xl:text-xl focus:z-10 focus:border-[#00cc83] focus:ring-[#00cc83] placeholder:text-gray-300"
+                            class="login-input is-invalid"
                             placeholder="enter tmc id">
                         <div class="absolute inset-y-0 left-0 flex items-center pointer-events-none z-20 pl-4">
                             <svg class="w-4 h-4 md:w-5 md:h-5 2xl:h-7 2xl:w-7 text-[#C7C9D9]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" fill-rule="evenodd"><path d="M24 0v24H0V0h24ZM12.594 23.258l-.012.002l-.071.035l-.02.004l-.014-.004l-.071-.036c-.01-.003-.019 0-.024.006l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427c-.002-.01-.009-.017-.016-.018Zm.264-.113l-.014.002l-.184.093l-.01.01l-.003.011l.018.43l.005.012l.008.008l.201.092c.012.004.023 0 .029-.008l.004-.014l-.034-.614c-.003-.012-.01-.02-.02-.022Zm-.715.002a.023.023 0 0 0-.027.006l-.006.014l-.034.614c0 .012.007.02.017.024l.015-.002l.201-.093l.01-.008l.003-.011l.018-.43l-.003-.012l-.01-.01l-.184-.092Z"/><path fill="currentColor" d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10s10-4.477 10-10S17.523 2 12 2ZM8.5 9.5a3.5 3.5 0 1 1 7 0a3.5 3.5 0 0 1-7 0Zm9.758 7.484A7.985 7.985 0 0 1 12 20a7.985 7.985 0 0 1-6.258-3.016C7.363 15.821 9.575 15 12 15s4.637.821 6.258 1.984Z"/></g></svg>
@@ -66,7 +66,7 @@
                     <label for="password" class="block text-sm md:text-base 2xl:text-xl font-medium mb-2">PASSWORD</label>
                     <div class="relative">
                         <input type="password" id="password" name="password"
-                            class="py-3 xl:py-4 2xl:py-5 px-4 pl-10 2xl:pl-14 block w-full border-gray-200 shadow-sm rounded-md text-sm md:text-base 2xl:text-xl focus:z-10 focus:border-[#00cc83] focus:ring-[#00cc83] placeholder:text-gray-300"
+                            class="login-input"
                             placeholder="enter password">
                         <div class="absolute inset-y-0 left-0 flex items-center pointer-events-none z-20 pl-4">
                             <svg class="w-4 h-4 md:w-5 md:h-5 2xl:h-7 2xl:w-7 text-[#C7C9D9]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6 22q-.825 0-1.413-.588T4 20V10q0-.825.588-1.413T6 8h1V6q0-2.075 1.463-3.538T12 1q2.075 0 3.538 1.463T17 6v2h1q.825 0 1.413.588T20 10v10q0 .825-.588 1.413T18 22H6Zm6-5q.825 0 1.413-.588T14 15q0-.825-.588-1.413T12 13q-.825 0-1.413.588T10 15q0 .825.588 1.413T12 17ZM9 8h6V6q0-1.25-.875-2.125T12 3q-1.25 0-2.125.875T9 6v2Z"/></svg>
