--- a/project-detailed-view.html
+++ b/project-detailed-view.html
@@ -215,58 +215,58 @@
                 <div class="overflow-y-auto flex-1 flex flex-col gap-2">
                     <ul class="list-decimal">
                         <li>
-                            <a href="#project-link" class="project-link active">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link active">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                         <li>
-                            <a href="#project-link" class="project-link">Google Project #3453535sfsfsfsf</a>
+                            <a href="#project-link" class="project-link">Google Project</a>
                         </li>
                     </ul>
                     
                 </div>
             </div>
-            <div class="flex-1 p-3 overflow-x-auto">
+            <div class="flex-1 p-3 overflow-x-hidden">
                 <div class="flex items-stretch overflow-x-auto border-y -ml-4 -mr-4 -mt-4 mb-4">
                     <div class="flex items-center gap-2 px-4 border-r py-2">
                         <img class="w-5 h-5 rounded-full" src="./assets/images/google-logo.svg" alt="">
@@ -308,7 +308,7 @@
                 <p class="text-2xl font-bold">Project 01 <span class="bg-slate-800 rounded-full px-3 py-1 text-white ml-2 text-xs">T&M</span></p>
                 <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pulvinar ipsum id ex sagittis, id varius diam mollis. Nam vestibulum dignissim gravida...</p>
                 <p class="mb-3 font-bold">Contract Details</p>
-                <div class="bg-[#fafafa] p-3 rounded flex-wrap flex items-center gap-3 mb-3">
+                <div class="bg-[#fafafa] p-3 rounded flex-wrap flex items-center gap-y-4 gap-x-8 mb-3">
                     <div>
                         <p>Contract Start Date</p>
                         <p class="font-bold">11/11/2023</p>
@@ -331,7 +331,7 @@
                     </div>
                 </div>
                 <p class="mb-3 font-bold">Information</p>
-                <div class="bg-[#fafafa] p-3 rounded flex items-center flex-wrap gap-y-8 gap-x-4 mb-3">
+                <div class="bg-[#fafafa] p-3 rounded flex items-center flex-wrap gap-y-4 gap-x-8 mb-3">
                     <div>
                         <p>Created On</p>
                         <p class="font-bold">11/11/2023</p>
@@ -385,7 +385,7 @@
                     </div>
                 </div>
                 <div class="flex justify-between flex-wrap gap-4 items-center mt-4">
-                    <div>
+                    <div class="mb-3">
                         <h2 class="font-extrabold text-xl 2xl:text-2xl text-[#4B4E5C]">Billing Information</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, impedit.</p>
                     </div>
