--- a/add-contract.html
+++ b/add-contract.html
@@ -279,6 +279,36 @@
                         placeholder="Enter Practice">
                     </div>
                 </div>
+                <div>
+                    <div class="flex items-center justify-between gap-3 flex-wrap">
+                        <span class="mb-2 font-medium block">Costing sheet</span>
+                        <button type="button"
+                            class="px-5 inline-flex justify-center items-center gap-2 rounded-md border outline-none border-transparent text-emerald-500 text-sm 2xl:text-base"
+                            data-hs-overlay="#costing-sheet-modal">
+                            <svg class="w-4 h-4" width="21" height="21" viewBox="0 0 21 21" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M10.5 0C7.72562 0.0334721 5.07431 1.15047 3.11239 3.11239C1.15047 5.07431 0.0334721 7.72562 0 10.5C0.0334721 13.2744 1.15047 15.9257 3.11239 17.8876C5.07431 19.8495 7.72562 20.9665 10.5 21C13.2744 20.9665 15.9257 19.8495 17.8876 17.8876C19.8495 15.9257 20.9665 13.2744 21 10.5C20.9665 7.72562 19.8495 5.07431 17.8876 3.11239C15.9257 1.15047 13.2744 0.0334721 10.5 0ZM16.5 11.25H11.25V16.5H9.75V11.25H4.5V9.75H9.75V4.5H11.25V9.75H16.5V11.25Z"
+                                    fill="#00CC83" />
+                                <path d="M16.5 11.25H11.25V16.5H9.75V11.25H4.5V9.75H9.75V4.5H11.25V9.75H16.5V11.25Z"
+                                    fill="white" />
+                            </svg>
+                            Create</button>
+                    </div>
+
+                    <div class="flex items-center gap-3 flex-wrap">
+                        <!-- <input type="text"
+                        class="k-input"
+                        placeholder="Enter Practice"> -->
+
+                        <select class="k-input">
+                            <option selected>Open this select menu</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <div class="mt-4">
                 <button type="button"
@@ -288,6 +318,115 @@
             </div>
         </form>
     </div>
+
+    <div id="costing-sheet-modal" class="hs-overlay hidden w-full h-full fixed top-0 left-0 z-[60] overflow-x-hidden overflow-y-auto">
+        <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-4xl sm:w-full m-3 sm:mx-auto h-[calc(100%-3.5rem)]">
+          <div class="max-h-full overflow-hidden flex flex-col bg-white border shadow-sm rounded-xl">
+            <div class="flex justify-between items-center py-3 px-4 border-b">
+                <div>
+                    <h2 class="font-bold text-gray-800">Costing sheet</h2>
+                </div>
+              <button type="button" class="hs-dropdown-toggle inline-flex flex-shrink-0 justify-center items-center h-8 w-8 rounded-md text-gray-500 hover:text-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-white transition-all text-sm" data-hs-overlay="#costing-sheet-modal">
+                <span class="sr-only">Close</span>
+                <svg class="w-3.5 h-3.5" width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.258206 1.00652C0.351976 0.912791 0.479126 0.860131 0.611706 0.860131C0.744296 0.860131 0.871447 0.912791 0.965207 1.00652L3.61171 3.65302L6.25822 1.00652C6.30432 0.958771 6.35952 0.920671 6.42052 0.894471C6.48152 0.868271 6.54712 0.854471 6.61352 0.853901C6.67992 0.853321 6.74572 0.865971 6.80722 0.891111C6.86862 0.916251 6.92442 0.953381 6.97142 1.00032C7.01832 1.04727 7.05552 1.1031 7.08062 1.16454C7.10572 1.22599 7.11842 1.29183 7.11782 1.35822C7.11722 1.42461 7.10342 1.49022 7.07722 1.55122C7.05102 1.61222 7.01292 1.6674 6.96522 1.71352L4.31871 4.36002L6.96522 7.00648C7.05632 7.10078 7.10672 7.22708 7.10552 7.35818C7.10442 7.48928 7.05182 7.61468 6.95912 7.70738C6.86642 7.80018 6.74102 7.85268 6.60992 7.85388C6.47882 7.85498 6.35252 7.80458 6.25822 7.71348L3.61171 5.06702L0.965207 7.71348C0.870907 7.80458 0.744606 7.85498 0.613506 7.85388C0.482406 7.85268 0.357007 7.80018 0.264297 7.70738C0.171597 7.61468 0.119017 7.48928 0.117877 7.35818C0.116737 7.22708 0.167126 7.10078 0.258206 7.00648L2.90471 4.36002L0.258206 1.71352C0.164476 1.61976 0.111816 1.4926 0.111816 1.36002C0.111816 1.22744 0.164476 1.10028 0.258206 1.00652Z" fill="currentColor"/>
+                </svg>
+              </button>
+            </div>
+            <div class="p-4 overflow-y-auto">
+                <div class="flex items-center justify-between mb-5">
+                    <div>
+                        <h2 class="font-extrabold text-xl 2xl:text-2xl text-[#4B4E5C]">Create New</h2>
+                        <p>Please create the costing sheet by filling the requires information</p>
+                    </div>
+                    <div class="flex items-center justify-between gap-3">
+                        <button type="button"
+                            class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm">
+                            Upload Excel
+                        </button>
+                        <button type="button"
+                            class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-emerald-400 hover:bg-[#00cc83] hover:text-white text-emerald-400 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm sm:text-base">
+                            Save As Draft
+                        </button>
+                    </div>
+                </div>
+
+                <form action="#">
+                    <div id="costingModalWrapper" class="flex flex-col gap-6">
+                        <div class="grid grid-cols-1 sm:grid-cols-4 gap-3">
+                            <div>
+                                <span class="mb-2 font-medium block">Skill 1 Name</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="email"
+                                        class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                        placeholder="Enter Skill Name">
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="mb-2 font-medium block">Skill 1 Experience</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <select class="k-input">
+                                        <option selected>Open this select menu</option>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="mb-2 font-medium block">No Required Resources</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="email"
+                                        class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                        placeholder="Enter Skill Name">
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="mb-2 font-medium block">Skill 1 Cost</span>
+                                <div class="flex items-center gap-3 flex-wrap">
+                                    <input type="email"
+                                        class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                        placeholder="Enter Skill Cost">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mt-4">
+                        <button type="button"
+                            class="mb-4 py-2 px-3 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-white text-emerald-400 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm"
+                            id="costingModalBtn" onclick="AddMore()">
+
+                            <svg class="w-5 h-5" width="21" height="21" viewBox="0 0 21 21" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M10.5 0C7.72562 0.0334721 5.07431 1.15047 3.11239 3.11239C1.15047 5.07431 0.0334721 7.72562 0 10.5C0.0334721 13.2744 1.15047 15.9257 3.11239 17.8876C5.07431 19.8495 7.72562 20.9665 10.5 21C13.2744 20.9665 15.9257 19.8495 17.8876 17.8876C19.8495 15.9257 20.9665 13.2744 21 10.5C20.9665 7.72562 19.8495 5.07431 17.8876 3.11239C15.9257 1.15047 13.2744 0.0334721 10.5 0ZM16.5 11.25H11.25V16.5H9.75V11.25H4.5V9.75H9.75V4.5H11.25V9.75H16.5V11.25Z"
+                                    fill="#00CC83" />
+                                <path d="M16.5 11.25H11.25V16.5H9.75V11.25H4.5V9.75H9.75V4.5H11.25V9.75H16.5V11.25Z"
+                                    fill="white" />
+                            </svg>
+                            Add More
+                        </button>
+                    </div>
+                    <div  class="flex justify-end items-center gap-x-2 py-3 px-4 border-t -ml-4 -mr-4 -mb-4 sticky -bottom-4 bg-white pt-4">
+                        <button type="button" class="hs-dropdown-toggle py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm" data-hs-overlay="#costing-sheet-modal">
+                            Close
+                          </button>
+                          <button type="submit" class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-emerald-500 text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm" href="#">
+                            Save changes
+                          </button>
+                    </div>
+                </form>
+            </div>
+            <!-- <div class="flex justify-end items-center gap-x-2 py-3 px-4 border-t">
+
+            </div> -->
+          </div>
+        </div>
+      </div>
     <div id="hs-overlay-right"
         class="hs-overlay hs-overlay-open:translate-x-0 hidden translate-x-full fixed top-0 right-0 transition-all duration-300 transform h-full max-w-xs w-full w-full z-[60] bg-white border-l hidden flex flex-col"
         tabindex="-1">
@@ -334,7 +473,7 @@
                       </div>
                   </div>
                 </div>
-              
+
                 <div class="hs-accordion" id="hs-basic-with-title-and-arrow-stretched-heading-two">
                   <button class="hs-accordion-toggle hs-accordion-active:text-blue-600 group py-3 inline-flex items-center justify-between gap-x-3 w-full font-semibold text-left text-gray-800 transition hover:text-gray-500" aria-controls="hs-basic-with-title-and-arrow-stretched-collapse-two">
                     Project Type
@@ -356,7 +495,7 @@
                       </div>
                   </div>
                 </div>
-              
+
                 <div class="hs-accordion" id="hs-basic-with-title-and-arrow-stretched-heading-three">
                   <button class="hs-accordion-toggle hs-accordion-active:text-blue-600 group py-3 inline-flex items-center justify-between gap-x-3 w-full font-semibold text-left text-gray-800 transition hover:text-gray-500" aria-controls="hs-basic-with-title-and-arrow-stretched-collapse-three">
                     Customer
@@ -443,6 +582,18 @@
         </div>
     </div>
     <script src="./assets/js/preline.js"></script>
+    <script>
+        function AddMore() {
+            const BtnAdd = document.querySelector("#costingModalBtn");
+            const card = document.querySelector("#costingModalWrapper");
+            const row = card.querySelector("div:first-child");
+
+            const newDiv = document.createElement("div");
+            newDiv.classList.add("grid", "grid-cols-1", "sm:grid-cols-4", "gap-3")
+            newDiv.innerHTML = row.innerHTML;
+            card.append(newDiv);
+        }
+    </script>
 </body>
 
 </html>
