--- a/dh_submit_checklist.html
+++ b/dh_submit_checklist.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="./dist/output.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -248,23 +249,140 @@
         </div>
 
         <h2 class="font-extrabold text-xl 2xl:text-2xl text-[#4B4E5C] mb-6">Pre Sales Checklist</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
-            <div class="">
-                <span class="mb-2 font-bold block">1. ERP systems in use with their version and respective
-                    databases</span>
-                <div>
-                    <p class="text-sm font-semibold text-gray-500">Reference Response</p>
-                    <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
-                        dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <div class="flex flex-col gap-4">
+                <div class="dh-checklist-fill">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="flex">
+                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4" checked>
+                          </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Reference Response</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Response From Client</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <textarea class="k-input w-full mt-4" name="" id="" cols="30" rows="10"></textarea>
                 </div>
-                <div>
-                    <p class="text-sm font-semibold text-gray-500">Response From Client</p>
-                    <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
-                        dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                <div class="dh-checklist-fill">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="flex">
+                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
+                          </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Reference Response</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Response From Client</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <textarea class="k-input w-full mt-4" name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="dh-checklist-fill">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="flex">
+                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
+                          </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Reference Response</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Response From Client</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <textarea class="k-input w-full mt-4" name="" id="" cols="30" rows="10"></textarea>
                 </div>
             </div>
+            <div class="flex flex-col gap-4">
+                <div class="dh-checklist-fill">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="flex">
+                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
+                          </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Reference Response</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Response From Client</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <textarea class="k-input w-full mt-4" name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="dh-checklist-fill">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="flex">
+                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
+                          </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Reference Response</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Response From Client</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <textarea class="k-input w-full mt-4" name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="dh-checklist-fill">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="flex">
+                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
+                          </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Reference Response</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-500">Response From Client</p>
+                        <p class="text-sm text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aliquid alias nobis magni itaque provident, unde quia, at quae deserunt repellat temporibus
+                            dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
+                    </div>
+                    <textarea class="k-input w-full mt-4" name="" id="" cols="30" rows="10"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
+            
             <div class="">
                 <span class="mb-2 font-bold block">2. ERP systems in use with their version and respective
                     databases</span>
@@ -282,7 +400,7 @@
                 </div>
             </div>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
+        <!-- <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
             <div class="">
                 <span class="mb-2 font-bold block">3. ERP systems in use with their version and respective
                     databases</span>
@@ -349,15 +467,15 @@
                         dolor esse labore culpa hic laboriosam nam officia dolorem.</p>
                 </div>
             </div>
+        </div> -->
+        <div class="mt-4">
+            <p class="font-bold text-xl mb-2">Additional Information</p>
+            <textarea class="k-input w-full" name="" id="" cols="30" rows="10"></textarea>
         </div>
-        <div class="flex items-center gap-4">
-            <button data-hs-overlay="#hs-medium-modal" type="button"
-                class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-emerald-400 bg-[#00cc83] text-white hover:opacity-70 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm sm:text-base">
-                Approve & Assign
-            </button>
+        <div class="flex items-center justify-center gap-4 mt-4">
             <button data-hs-overlay="#hs-reject-modal" type="button"
                 class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-black bg-white text-black hover:bg-black hover:text-white focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2 transition-all text-sm sm:text-base">
-                Reject
+                Submit
             </button>
         </div>
     </div>
