--- a/employees.html
+++ b/employees.html
@@ -236,10 +236,10 @@
                     <div class="-m-1.5">
                         <div class="p-1.5 min-w-full block align-middle">
                             <div class="overflow-hidden">
-                                <table id="datatable" class="min-w-full divide-y divide-gray-200">
+                                <table id="datatable" class="last-column-fixed first-column-fixed min-w-full divide-y divide-gray-200">
                                     <thead>
                                         <tr>
-                                            <th scope="col" class="pl-6 py-3 text-left">
+                                            <th scope="col" class="pl-6 pr-2 py-3 text-left">
                                                 <label for="hs-at-with-checkboxes-main" class="flex">
                                                   <input type="checkbox" class="shrink-0 border-gray-200 rounded text-blue-600 pointer-events-none focus:ring-blue-500" id="hs-at-with-checkboxes-main">
                                                   <span class="sr-only">Checkbox</span>
