--- a/customer_detailed_view_all_info.html
+++ b/customer_detailed_view_all_info.html
@@ -186,12 +186,42 @@
         </div>
     </div>
     <div class="main overflow-y-auto">
-        <span class="text-2xl font-extrabold block text-left mb-4">All Details</span>
-        <div class="bg-[#f9f9f9] p-4 rounded mb-4">
-
+        <span class="text-2xl font-extrabold block text-left mb-4">Customer Details</span>
+        <div class="h-[1px] bg-gray-200 my-4"></div>
+        <div class="p-4 rounded mb-4 flex items-center gap-4 flex-wrap">
+            <div class="flex items-center gap-2 sm:border-r pr-3">
+                <div class="logo w-10 h-10 bg-white rounded-full overflow-hidden flex items-center justify-center">
+                    <img class="w-8 h-8 rounded-full object-cover" src="./assets/images/google-logo.svg" alt="">
+                </div>
+                <div>
+                    <p class="text-[.625rem]">Customer</p>
+                    <p class="font-bold">Google</p>
+                </div>
+            </div>
+            <div class="flex flex-wrap pl-3 items-center gap-4">
+                <div>
+                    <div>
+                        <span class="text-sm">Email Id</span>
+                    </div>
+                    <p class="text-sm font-bold">test@gmail.com</p>
+                </div>
+                <div>
+                    <div>
+                        <span class="text-sm">Phone No</span>
+                    </div>
+                    <p class="text-sm font-bold">+1234567890</p>
+                </div>
+                <div>
+                    <div>
+                        <span class="text-sm">Location</span>
+                    </div>
+                    <p class="text-sm font-bold">2300+ mayor street, MI 2432 USA</p>
+                </div>
+            </div>
         </div>
+        <div class="h-[1px] bg-gray-200 my-4"></div>
         <span class="text-2xl font-extrabold block text-left mb-4">Other Information</span>
-        <div class="bg-[#f9f9f9] p-4 rounded mb-4 flex gap-4 flex-wrap">
+        <div class="p-4 rounded mb-4 flex gap-4 flex-wrap">
             <div>
                 <p class="text-sm 2xl:text-base">First Name:</p>
                 <p class="text-sm 2xl:text-base font-bold">987 654 3212</p>
@@ -221,8 +251,9 @@
                 <p class="text-sm 2xl:text-base font-bold">987 654 3212</p>
             </div>
         </div>
+        <div class="h-[1px] bg-gray-200 my-4"></div>
         <span class="text-2xl font-extrabold block text-left mb-4">Address</span>
-        <div class="bg-[#f9f9f9] p-4 rounded mb-4 flex gap-4 flex-wrap">
+        <div class="p-4 rounded mb-4 flex gap-4 flex-wrap">
             <div>
                 <p class="text-sm 2xl:text-base">Country:</p>
                 <p class="text-sm 2xl:text-base font-bold">987 654 3212</p>
